hard-gists/8949577/run.log
=== Docker Run Log for 8949577 ===
Started at: Mi 29. Okt 18:05:15 CET 2025

[2025-10-29 18:05:16] START: Running container for 8949577
[2025-10-29 18:05:16] SUCCESS: Container b2934feaddbe870e585208d403a9ea544bfa513132cf9f23ed5fcaf1935a2de6 started for 8949577
=== Container logs for 8949577 ===
  File "/snippet.py", line 239
    if(self.env.state <> GAME_DYING):
                      ^^
SyntaxError: invalid syntax
=== End of logs for 8949577 ===
[2025-10-29 18:05:18] INFO: Container b2934feaddbe870e585208d403a9ea544bfa513132cf9f23ed5fcaf1935a2de6 has stopped
